<resources>
    <string name="app_name">Epróba</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">Epróba</string>
    <string name="camera_fragment_label">Scan exam</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="submit">Submit</string>
    <string name="exam_name_hint">eg. My exam 1</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Try again</string>
    <string name="account">Account</string>
    <string name="title_activity_profile">Profile</string>
    <string name="logged_out">Logged out</string>
    <string name="button_login">Login</string>
    <string name="button_logout">Logout</string>
    <string name="create_exam">Create a new exam</string>
    <string name="progress_percentage">Progress: %d%%</string>
    <string name="advertisement">Advertisement</string>
    <string name="settings">Settings</string>
    <string name="display_ads">Display ads</string>
    <string name="select_server">App server</string>
    <string name="main_server">Main server</string>
    <string name="dev_server">Developer server</string>
    <string name="awaiting_approval">On %s at %s, an approval request was sent to %s</string>
    <string name="approved">On %s at %s, the task was approved by %s</string>
    <string name="rejected">On %s at %s, the task was rejected by %s</string>
    <string name="someone">someone</string>
    <string name="welcome_message">Welcome to the Epróba app, \nplease log in to get started</string>
    <string name="title_activity_create_exam">Create Exam</string>
    <string name="title_scan_exam">Scan</string>
    <string name="title_compose_exam">Compose</string>
    <string name="title_templates">Templates</string>
    <string name="title_your_exams">Your exams</string>
    <string name="title_manage_exams">Manage exams</string>
    <string name="title_accept_tasks">Accept tasks</string>
    <string name="error_screen_title">An unexpected error has occurred and the application cannot continue</string>
    <string name="restart_app">Restart app</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="submit_task">Submit</string>
    <string name="unsubmit_task">Unsubmit</string>
    <string name="error_dialog_title">Error</string>
    <string name="task_approval_error_message">An error occurred and the task was not approved, please try again later</string>
    <string name="task_rejection_error_message">An error occurred and the task was not rejected, please try again later</string>
    <string name="task_submission_error_message">An error occurred and the task was not submitted, please try again later</string>
    <string name="task_unsubmission_error_message">An error occurred and the task was not unsubmitted, please try again later</string>
    <string name="search">Search</string>
    <string name="no_exams">No exams</string>
    <string name="no_tasks">You don\'t have any tasks to approve</string>
    <string name="scout">Scout</string>
    <string name="exam_name">Exam name</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="dev_server_message">You are using a custom server, exams may be outdated and changes made here won\'t appear on a primary server (eproba.pl). Visit settings to change it</string>
    <string name="sometime">Sometime</string>
    <string name="edit_exam">Edit</string>
    <string name="delete_exam">Delete</string>
    <string name="archive_exam">Archive</string>
    <string name="unarchive_exam">Unarchive</string>
    <string name="not_implemented_yet">Not available yet</string>
    <string name="delete_exam_confirmation">Are you sure you want to delete this exam (%s)? You will not be able to restore it later</string>
    <string name="archive_exam_confirmation">Are you sure you want to archive this exam (%s)? It will go to the archive and you will be able to restore it later</string>
    <string name="unarchive_exam_confirmation">Are you sure you want to unarchive this exam (%s)? It will come back to your main exam tray</string>
    <string name="delete_exam_title">Permanently delete?</string>
    <string name="exam_deleted">Exam deleted</string>
    <string name="exam_deletion_error">An error has occurred and the exam has not been deleted:\n\n%s</string>
    <string name="logged_out_message">You have been logged out</string>
    <string name="relogin">Log in again</string>
    <string name="archive_exam_title">Archive exam?</string>
    <string name="unarchive_exam_title">Unarchive exam?</string>
    <string name="exam_archived">Archived exam</string>
    <string name="exam_unarchived">Unarchived exam</string>
    <string name="exam_creating_unauthorized_error">You are not authorized to create an exam for this user</string>
    <string name="exam_creating_error">An error has occurred and the exam has not been created:\n\n%s</string>
    <string name="exam_archiving_error">An error has occurred and the exam has not been archived:\n\n%s</string>
    <string name="exam_unarchiving_error">An error has occurred and the exam has not been unarchived:\n\n%s</string>
    <string name="archived">Archived</string>
    <string name="team">Team</string>
    <string name="patrol">Patrol</string>
    <string name="select_team">Select team</string>
    <string name="select_patrols">Select patrols</string>
    <string name="close">Close</string>
    <string name="select_approver">Select approver</string>
    <string name="approver">Approver</string>
    <string name="promoted_title">You\'ve been promoted</string>
    <string name="promoted_message">Congratulations on your promotion 🎉\nYou just got access to new features, feel free to try them out.</string>
    <string name="demoted_title">You\'ve been demoted</string>
    <string name="demoted_message">Unfortunately, you have been demoted. \nPlease be aware that you will no longer have access to certain features.</string>
    <string name="general_notification_channel_name">General</string>
    <string name="exam_created">Exam created</string>
    <string name="enable">Enable</string>
    <string name="skip">Skip</string>
    <string name="notifications_request_title">Get notified!</string>
    <string name="notifications_request_message">Stay on top of your exams and get notified when something needs your attention</string>
    <string name="permission_denied">Permission denied</string>
    <string name="notifications_permission_denied_message">You will not receive any notifications, if you would like to change it, go to settings and allow notifications for this app.</string>
    <string name="last_updated_at">Last updated at:</string>
    <string name="supervisor">Supervisor</string>
    <string name="use_template">Use template</string>
    <string name="task">Task</string>
    <string name="tasks">Tasks</string>
    <string name="add_another_task">Add another task</string>
    <string name="clear">Clear</string>
    <string name="required_field">This field is required</string>
    <string name="users_list_download_error">Couldn\'t download the list of users, please try again leater.</string>
    <string name="at_least_one_task_is_required">At least one task is required</string>
    <string name="fill_in_all_fields">Please fill in all fields</string>
    <string name="user_does_not_exist">User doesn\'t exist</string>
    <string name="select_image">Select image</string>
    <string name="edit">Edit</string>
    <string name="try_again">Try again</string>
    <string name="maintenance_screen_message">Sorry for the inconvenience but we\'re performing some maintenance right now. Please check back later.</string>
    <string name="maintenance_screen_title">Maintenance in progress…</string>
    <string name="title_edit_exam">Edit exam</string>
    <string name="exam_saved_dialog_title">Exam saved</string>
    <string name="exam_editing_unauthorized_error">You are not authorized to edit this exam</string>
    <string name="exam_editing_error">An error has occurred and the exam has not been edited:\n\n%s</string>
    <string name="settings_category_general">General</string>
    <string name="settings_category_about">About</string>
    <string name="app_version">App version</string>
    <string name="author">Author</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>
    <string name="exit_app">Exit</string>
    <string name="logo">Epróba logo</string>
    <string name="the_end_screen_title">The Epróba service has ended its operations.</string>
    <string name="the_end_signature" translatable="false">~ Czuwaj!\n\"Czapla\"</string>
    <string name="the_end_message">After nearly 4 years of operation, Epróba has been closed. We thank all users for using the service.\nIf you have any questions, please contact antoni.czaplicki@zhr.pl.</string>
</resources>