<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_exam_navigation"
    app:startDestination="@+id/navigation_compose">

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.czaplicki.eproba.ScanExamFragment"
        android:label="@string/title_scan_exam"
        tools:layout="@layout/fragment_scan_exam" />

    <fragment
        android:id="@+id/navigation_compose"
        android:name="com.czaplicki.eproba.ui.compose_exam.ComposeFragment"
        android:label="@string/title_compose_exam"
        tools:layout="@layout/fragment_compose" />

    <fragment
        android:id="@+id/navigation_templates"
        android:name="com.czaplicki.eproba.ui.templates.TemplatesFragment"
        android:label="@string/title_templates"
        tools:layout="@layout/fragment_templates" />
</navigation>