<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/navigation_your_exams">

    <fragment
        android:id="@+id/navigation_your_exams"
        android:name="com.czaplicki.eproba.ui.user_exams.UserExamsFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

    </fragment>
    <activity
        android:id="@+id/profileActivity"
        android:name="com.czaplicki.eproba.ProfileActivity"
        android:label="activity_profile"
        tools:layout="@layout/activity_profile" />
    <action
        android:id="@+id/action_global_profileActivity"
        app:destination="@id/profileActivity" />
    <activity
        android:id="@+id/settingsActivity"
        android:name="com.czaplicki.eproba.SettingsActivity"
        android:label="activity_settings"
        tools:layout="@layout/activity_settings" />
    <action
        android:id="@+id/action_global_settingsActivity"
        app:destination="@id/settingsActivity" />
    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.czaplicki.eproba.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_LoginFragment_to_navigation_your_exams"
            app:destination="@id/navigation_your_exams"
            app:popUpTo="@id/navigation_your_exams"
            app:popUpToInclusive="true" />
    </fragment>
    <activity
        android:id="@+id/createExamActivity"
        android:name="com.czaplicki.eproba.CreateExamActivity"
        android:label="CreateExamActivity"
        tools:layout="@layout/activity_create_exam" />
    <fragment
        android:id="@+id/navigation_manage_exams"
        android:name="com.czaplicki.eproba.ui.manage_exams.ManageExamsFragment"
        android:label="@string/title_manage_exams"
        tools:layout="@layout/fragment_manage_exams" />
    <fragment
        android:id="@+id/navigation_edit_exam"
        android:name="com.czaplicki.eproba.ui.edit_exam.EditExamFragment"
        android:label="@string/title_edit_exam"
        tools:layout="@layout/fragment_edit_exam" />
    <action
        android:id="@+id/action_global_createExamActivity"
        app:destination="@id/createExamActivity" />
    <fragment
        android:id="@+id/navigation_accept_tasks"
        android:name="com.czaplicki.eproba.ui.accept_tasks.AcceptTasksFragment"
        android:label="@string/title_accept_tasks" />
    <action
        android:id="@+id/action_global_loginFragment"
        app:destination="@id/LoginFragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popUpTo="@id/LoginFragment"
        app:popUpToInclusive="true" />
</navigation>